--add-opens for test execution